fix(lecture3): add missing skip

--- a/slides/lecture3.qmd
+++ b/slides/lecture3.qmd
@@ -245,6 +245,8 @@ kern_dens_vec <- function(x, h, m = 512) {
 
 The bottleneck is the nested loop, which imposes considerable overhead in R.
 
+\pause\medskip
+
 Fixing this is easy! We can \alert{vectorize} the inner loop.
 
 ```{r}
