--- a/index.qmd
+++ b/index.qmd
@@ -57,7 +57,7 @@ for you to solve independently at your own pace.
 - **Solutions**: TBA
 - **Mini-slides**: TBA
 
-#### Lecture 4: Scatterplot Smoothing
+#### Lecture 4: Parallelization and Scatterplot Smoothing
 - **Slides:** [Scatterplot Smoothing](slides/lecture4.pdf)
 - **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
 - **Exercises:**
