fix: update lecture title in schedule

--- a/index.qmd
+++ b/index.qmd
@@ -58,7 +58,7 @@ for you to solve independently at your own pace.
 - **Mini-slides**: TBA
 
 #### Lecture 4: Parallelization and Scatterplot Smoothing
-- **Slides:** [Scatterplot Smoothing](slides/lecture4.pdf)
+- **Slides:** [Parallelization and Scatterplot Smoothing](slides/lecture4.pdf)
 - **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
 - **Exercises:**
   [3.4 (Chapter 3, CSWR)](https://cswr.nrhstat.org/bivariate#bivariate:ex)
